add target blank to ticket link

--- a/public/index.html
+++ b/public/index.html
@@ -714,7 +714,7 @@
           <div class="subBlock">
             <ul>
               <li>BOOKING TICKET</li>
-              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/ticket/type">PACKAGE & PROMOTION</a></li>
+              <li><a target='_blank' href="https://kaanshow-ec4c0.firebaseapp.com/ticket/type">PACKAGE & PROMOTION</a></li>
             </ul>
           </div>
         </div>
