--- a/public/index.html
+++ b/public/index.html
@@ -525,7 +525,7 @@
                   <img src='./images/logo/Master_SANOOKDEE_30x27cm.png' width="120">
 
                 </div>
-                <div class='logo-des'>SANOOKDEE TAWEESOOK</div>
+                <div class='logo-des'>SANOOKDEE TAWEESUK</div>
               </div>
             </a>
             <a href='#modal-link--partner5' class='modal-trigger'>
@@ -760,7 +760,7 @@
       </footer>
       <div class="footer-copy-right">
         <span>© 2016 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
-        <span style='float:right;'>TO THE TOP  <img src='./images/to_top.png' width='15'onclick="window.scrollTo(0,0)"/></span>
+        <span style='float:right; cursor: pointer;'>TO THE TOP  <img src='./images/to_top.png' width='15'onclick="window.scrollTo(0,0)"/></span>
       <div>
     </div>
   </div>
