--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           <h1>OUR BUSINESS</h1>
           <img src='./images/logo/Punjaluck_full.png' />
           <p>
-            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ SINGHA D’LUCK Cinematic Theatre และเป็นผู้สร้างนวัตกรรมให้กับอุตสาหกรรมการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN Presented by SINGHA CORPORATION<br>โดยมุ่งมั่นให้การแสดงนี้มีมาตรฐานระดับสากลในทุกๆ ด้าน ทั้งความคิดสร้างสรรค์ เทคโนโลยี โปรดักชั่น<br>ตลอดจนทีมงานและการทำงานอย่างมืออาชีพ
+            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ  SINGHA D’LUCK Cinematic Theatre และเป็นผู้สร้างนวัตกรรมให้กับอุตสาหกรรมการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN Presented by SINGHA CORPORATION<br>โดยมุ่งมั่นให้การแสดงนี้มีมาตรฐานระดับสากลในทุกๆ ด้าน ทั้งความคิดสร้างสรรค์ เทคโนโลยี โปรดักชั่น<br>ตลอดจนทีมงานและการทำงานอย่างมืออาชีพ
             <span class="hidden-readmore">
               เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์ เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล
             </span>
@@ -168,8 +168,8 @@
               <div class="board-detail modal-content">
                 <img src="./images/left-quote.png" width="35" />
                 <p>
-                  อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขัน<br>บนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง<br>KAAN Presented by SINGHA CORPORATION
-                  ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือ<br>ความคิดสร้างสรรค์ของคนไทย และมุ่งให้การแสดงนี้<br>กลายเป็น Highlight Destination
+                  อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขันบนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง KAAN Presented by SINGHA CORPORATION
+                  ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือ ความคิดสร้างสรรค์ของคนไทย และมุ่งให้การแสดงนี้ กลายเป็น Highlight Destination
                   ใหม่ที่น่าสนใจในระดับโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
@@ -187,11 +187,11 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลอง<br>
-                  ทำ Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ<br>
-                  ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า<br>
-                  KAAN Presented by SINGHA CORPORATION โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้<br>
-                  จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย ที่ทั้งชาวไทย<br>
+                  เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลอง
+                  ทำ Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ
+                  ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า
+                  KAAN Presented by SINGHA CORPORATION โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้
+                  จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย ที่ทั้งชาวไทย
                   และชาวต่างชาติจะต้องยอมรับในฝีมือ
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
@@ -209,11 +209,11 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  คำจำกัดความของ KAAN Presented by SINGHA CORPORATION คือ A Spectacular<br>
-                  Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลก<br>
-                  เข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อน<br>
-                  ในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต<br>
-                  ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย<br>
+                  คำจำกัดความของ KAAN Presented by SINGHA CORPORATION คือ A Spectacular
+                  Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลก
+                  เข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อน
+                  ในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต
+                  ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย
                   เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
@@ -231,9 +231,10 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบ<br>
-                  เข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมาย<br>
-                  ที่จะทำให้ KAAN Presented by SINGHA CORPORATION ก้าวขึ้นเป็นสุดยอดการแสดง<br>ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
+                  เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบ
+                  เข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมาย
+                  ที่จะทำให้ KAAN Presented by SINGHA CORPORATION ก้าวขึ้นเป็นสุดยอดการแสดง
+                  ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>(Anant Trisirikasem)</div>
@@ -250,10 +251,10 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโต<br>
-                  ได้อย่างไม่จำกัด เราทำ KAAN Presented by SINGHA CORPORATION ขึ้นเพื่อตั้งใจสร้างมูลค่า<br>
-                  ให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า<br>
-                  มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น<br>
+                  อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโต
+                  ได้อย่างไม่จำกัด เราทำ KAAN Presented by SINGHA CORPORATION ขึ้นเพื่อตั้งใจสร้างมูลค่า
+                  ให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า
+                  มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น
                   แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
@@ -271,17 +272,17 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย<br>
-                  และทำให้ SINGHASINGHA D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่<br>
-                  ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก รวมถึงสร้างรายได้ให้กับประเทศ<br>
-                  เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน<br>
-                  ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม<br>
-                  สุดยอดฝีมือของไทยหลายๆ ด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรก<br>
-                  เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา<br>
+                  เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย
+                  และทำให้ SINGHA SINGHA D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่
+                  ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก รวมถึงสร้างรายได้ให้กับประเทศ
+                  เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน
+                  ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม
+                  สุดยอดฝีมือของไทยหลายๆ ด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรก
+                  เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา
                   เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
-                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br>(Karnkridit Nimsombun)</div>
+                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ(Karnkridit Nimsombun)</div>
                 <div class='grey uppercase position'>
                   Managing Director
                 </div>
@@ -405,7 +406,7 @@
                 <div class='sub-title'>ผู้นําความคิดทางด้านสถาปัตยกรรมของประเทศไทย</div>
                 <p>
                 บริษัทสถาปนิกชั้นนำของประเทศไทย ที่มีชื่อเสียงโด่งดังระดับโลก<br>
-                ผู้ออกแบบSINGHA D’LUCK Cinematic Theatre ภายใต้แนวคิด “Levitation”<br>
+                ผู้ออกแบบ SINGHA D’LUCK Cinematic Theatre ภายใต้แนวคิด “Levitation”<br>
                 ด้วยความเชื่อมั่นว่าที่นี่จะกลายเป็นแลนด์มาร์คทางสถาปัตยกรรมใหม่<br>
                 ของเมืองไทย
                 </p>
@@ -465,8 +466,8 @@
                 <p>
                   จากประสบการณ์การทำงานร่วมกับชาวไทยและชาวต่างชาติมาหลายสิบปี<br>
                   ทีมบ้านริกรับหน้าที่ดูแลและจัดการเรื่องเทคนิคพิเศษต่างๆ ของโชว์<br>
-                  รวมทั้งระบบ Theatre System ของSINGHA D’LUCK Cinematic Theatre<br>
-                  เพื่อให้ KAAN เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆ นาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
+                  รวมทั้งระบบ Theatre System ของ SINGHA D’LUCK Cinematic Theatre<br>
+                  เพื่อให้ KAAN Presented by SINGHA CORPORATION เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆ นาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
                 </p>
                 <a target='_blank' href='http://www.baanrig.com'>
                 <div class="web-icon">
@@ -485,7 +486,7 @@
                 <div class='sub-title'>ผู้ผลิตละครเวที และ Live Show ชั้นนําของเมืองไทย<br>ที่มีประสบการณ์มากกว่า 10 ปี</div>
                 <p>
                   ทีม Scenario รับหน้าที่ในการวางแผนควบคุมดูแลนักแสดงและทีมงาน<br>
-                  รวมถึงการออกแบบและบริหารจัดการSINGHA D’LUCK Cinematic Theatre<br>
+                  รวมถึงการออกแบบและบริหารจัดการ SINGHA D’LUCK Cinematic Theatre<br>
                   เพื่อให้ KAAN เป็นโชว์ที่เต็มไปด้วยบุคลากรที่ทำงานอย่างมืออาชีพ
                 </p>
                 <a target='_blank' href='https://www.facebook.com/Exact.Scenario/'>
@@ -509,7 +510,7 @@
                 <h2>บริษัท ฤทธา จำกัด</h2>
                 <div class='sub-title'>บริษัทออกแบบและก่อสร้างอาคารมาตรฐานสูงของประเทศไทย</div>
                 <p>
-                  ผู้รับเหมาหลักของโครงการก่อสร้างSINGHA D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพ และความปลอดภัยระดับสากล
+                  ผู้รับเหมาหลักของโครงการก่อสร้าง SINGHA D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพ และความปลอดภัยระดับสากล
                 </p>
                 <div class="web-icon">
                   <a target='_blank' href='http://www.ritta.co.th/'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
