--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
           <div class='modal-hide-container' id='modal-link--board2'>
             <div class='modal-hide'>
               <div class='x-modal'><img src='./images/closeButtonBlack.png' /></div>
-              <div class="board-person-image" style='background-image:url("./images/girl.png")'></div>
+              <div class="board-person-image" style='background-image:url("./images/Panjaluck_Website (560x770px)_04-4-2 Board Profile คุณจีน่า_r11_bo.png")'></div>
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
@@ -310,7 +310,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board2" class='modal-trigger' style='background-image:url("./images/girl.png")'></a>
+                      <a href="#modal-link--board2" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-2 Board Profile คุณจีน่า_r11_bo.png")'></a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">จินา โอสถศิลป์</span>
