edit as feedback

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           <h1>OUR BUSINESS</h1>
           <img src='./images/logo/Punjaluck_full.png' />
           <p>
-            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ  SINGHA D’LUCK Cinematic Theatre และเป็นผู้สร้างนวัตกรรมให้กับอุตสาหกรรมการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN Presented by SINGHA CORPORATION<br>โดยมุ่งมั่นให้การแสดงนี้มีมาตรฐานระดับสากลในทุกๆ ด้าน ทั้งความคิดสร้างสรรค์ เทคโนโลยี โปรดักชั่น<br>ตลอดจนทีมงานและการทำงานอย่างมืออาชีพ
+            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ  SINGHA D’LUCK Cinematic Theatre และเป็นผู้สร้างนวัตกรรมให้กับอุตสาหกรรมการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN Presented by SINGHA CORPORATION โดยมุ่งมั่นให้การแสดงนี้มีมาตรฐานระดับสากลในทุกๆ ด้าน ทั้งความคิดสร้างสรรค์ เทคโนโลยี โปรดักชั่น ตลอดจนทีมงานและการทำงานอย่างมืออาชีพ
             <span class="hidden-readmore">
               เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์ เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล
             </span>
@@ -272,8 +272,8 @@
               <div class="board-detail modal-content">
                 <img src='./images/left-quote.png' width="35"/>
                 <p>
-                  เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย
-                  และทำให้ SINGHA SINGHA D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่
+                  เป้าหมายของ KAAN Presented by SINGHA CORPORATION คือการเป็นโชว์อันดับหนึ่งของเอเชีย
+                  และทำให้ SINGHA D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่
                   ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก รวมถึงสร้างรายได้ให้กับประเทศ
                   เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน
                   ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม
@@ -282,7 +282,7 @@
                   เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
-                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ(Karnkridit Nimsombun)</div>
+                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br>(Karnkridit Nimsombun)</div>
                 <div class='grey uppercase position'>
                   Managing Director
                 </div>
@@ -487,7 +487,7 @@
                 <p>
                   ทีม Scenario รับหน้าที่ในการวางแผนควบคุมดูแลนักแสดงและทีมงาน<br>
                   รวมถึงการออกแบบและบริหารจัดการ SINGHA D’LUCK Cinematic Theatre<br>
-                  เพื่อให้ KAAN เป็นโชว์ที่เต็มไปด้วยบุคลากรที่ทำงานอย่างมืออาชีพ
+                  เพื่อให้ KAAN Presented by SINGHA CORPORATION เป็นโชว์ที่เต็มไปด้วยบุคลากรที่ทำงานอย่างมืออาชีพ
                 </p>
                 <a target='_blank' href='https://www.facebook.com/Exact.Scenario/'>
                   <div class="facebook-icon">
