--- a/public/index.html
+++ b/public/index.html
@@ -684,34 +684,34 @@
           <div class='subBlock'>
             <ul>
               <li>D'LUCK</li>
-              <li><a href="https://d-luck.firebaseapp.com/#ABOUT-DLUCK">ABOUT D'LUCK</a></li>
-              <li><a href="https://d-luck.firebaseapp.com/#GALLERY">GALLERY</a></li>
-              <li><a href="https://d-luck.firebaseapp.com/#SEATING-PLAN">SEATING PLAN</a></li>
-              <li><a href="https://d-luck.firebaseapp.com/#THEATER-360">THEATER 360º</a></li>
-              <li><a href="https://d-luck.firebaseapp.com/#FACILITIES">FACILITIES</a></li>
-              <li><a href="https://d-luck.firebaseapp.com/#LOCATION-MAP">LOCATION & MAP</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#ABOUT-DLUCK">ABOUT D'LUCK</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#GALLERY">GALLERY</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#SEATING-PLAN">SEATING PLAN</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#THEATER-360">THEATER 360º</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#FACILITIES">FACILITIES</a></li>
+              <li><a target='_blank' href="https://d-luck.firebaseapp.com/#LOCATION-MAP">LOCATION & MAP</a></li>
             </ul>
           </div>
           <div class='subBlock'>
             <ul>
               <li>PANJALUCK</li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#business-page'>OUR BUSINESS</a></li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#vision-page'>VISION & MISSION</a></li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#corporate-page'>CORPORATE VALUE</a></li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#board-page'>BOARD PROFILE</a></li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#partner-page'>OUR PARTNER</a></li>
-              <li><a href='https://punjaluck-a28c1.firebaseapp.com/#faq-page'>WORK WITH US</a></li>
+              <li><a target='_blank' href='/#business-page'>OUR BUSINESS</a></li>
+              <li><a target='_blank' href='/#vision-page'>VISION & MISSION</a></li>
+              <li><a target='_blank' href='/#corporate-page'>CORPORATE VALUE</a></li>
+              <li><a target='_blank' href='/#board-page'>BOARD PROFILE</a></li>
+              <li><a target='_blank' href='/#partner-page'>OUR PARTNER</a></li>
+              <li><a target='_blank' href='/#faq-page'>WORK WITH US</a></li>
             </ul>
           </div>
           <div class="subBlock">
             <ul>
               <li>INFO & DOWNLOAD</li>
-              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/info/news" target="_blank" >NEWS</a></li>
-              <li><a href="https://kaanshow-ec4c0.firebaseapp.com/info/download" target="_blank" >DOWNLOAD <br /> (PHOTO, FACT SHEET, CLIPS)</a></li>
-              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/term' target="_blank">TERMS & CONDITIONS</a></li>
-              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/disclaimer/' target="_blank">DISCLIMER</a></li>
-              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/privacy/' target="_blank">PRIVACY</a></li>
-              <li><a href='https://kaanshow-ec4c0.firebaseapp.com/info/faq/' target="_blank">FAQ</a></li>
+              <li><a target='_blank' href="https://kaanshow-ec4c0.firebaseapp.com/info/news" target="_blank" >NEWS</a></li>
+              <li><a target='_blank' href="https://kaanshow-ec4c0.firebaseapp.com/info/download" target="_blank" >DOWNLOAD <br /> (PHOTO, FACT SHEET, CLIPS)</a></li>
+              <li><a target='_blank' href='https://kaanshow-ec4c0.firebaseapp.com/info/term' target="_blank">TERMS & CONDITIONS</a></li>
+              <li><a target='_blank' href='https://kaanshow-ec4c0.firebaseapp.com/info/disclaimer/' target="_blank">DISCLIMER</a></li>
+              <li><a target='_blank' href='https://kaanshow-ec4c0.firebaseapp.com/info/privacy/' target="_blank">PRIVACY</a></li>
+              <li><a target='_blank' href='https://kaanshow-ec4c0.firebaseapp.com/info/faq/' target="_blank">FAQ</a></li>
             </ul>
           </div>
           <div class="subBlock">
