--- a/public/index.html
+++ b/public/index.html
@@ -342,7 +342,7 @@
                 </div>
               </li>
               <li>
-                <div class='container-fluid board-container'>
+                <div class='container-fluid board-container hackHidden' style='display:none;'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
                       <a href="#modal-link--board4" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png")'></a>
@@ -763,7 +763,7 @@
       </footer>
       <div class="footer-copy-right">
         <span>© 2016 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
-        <span style='float:right; cursor: pointer;'>TO THE TOP  <img src='./images/to_top.png' width='15'onclick="window.scrollTo(0,0)"/></span>
+        <span style='float:right; cursor: pointer;' onclick="window.scrollTo(0,0)">TO THE TOP  <img src='./images/to_top.png' width='15'/></span>
       <div>
     </div>
   </div>
