--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
                   Destination ใหม่ที่น่าสนใจในระดับโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">ศิริวัฒน์ วงศ์จารุกร<br>(SIRIWAT VONGJARUKORN)</div>
+                <div class="grey uppercase">ศิริวัฒน์ วงศ์จารุกร<br><span class="Montserrat">(SIRIWAT VONGJARUKORN)</span></div>
                 <div class='grey uppercase position'>
                   CHAIRMAN OF THE BOARD
                 </div>
@@ -195,7 +195,7 @@
                   ที่ทั้งชาวไทย และชาวต่างชาติจะต้องยอมรับในฝีมือ
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="uppercase grey">จินา โอสถศิลป์<br>(Jina Osothsilp)</div>
+                <div class="uppercase grey">จินา โอสถศิลป์<br><span class="Montserrat">(Jina Osothsilp)</span></div>
                 <div class='grey uppercase position'>
                   EXECUTIVE COMMITTEE
                 </div>
@@ -214,7 +214,7 @@
                   600 ชีวิต ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">ยงยุทธ ทองกองทุน<br>(Yongyoot Thongkongtoon)</div>
+                <div class="grey uppercase">ยงยุทธ ทองกองทุน<br><span class="Montserrat">(Yongyoot Thongkongtoon)</span></div>
                 <div class='grey uppercase position'>
                   Executive Committee, Producer and Artistic Director
                 </div>
@@ -232,7 +232,7 @@
                   KAAN Presented by SINGHA CORPORATION ก้าวขึ้นเป็นสุดยอดการแสดง ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>(Anant Trisirikasem)</div>
+                <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br><<span class="Montserrat">(Anant Trisirikasem)</span></div>
                 <div class='grey uppercase position' style='white-space: no-wrap'>
                   Executive Committee, Theatre’s Technology and System Specialist
                 </div>
@@ -251,7 +251,7 @@
                   แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">ธนพล วิระเทพสุภรณ์<br>(Tanapol Viratepsuporn)</div>
+                <div class="grey uppercase">ธนพล วิระเทพสุภรณ์<br><span class="Montserrat">(Tanapol Viratepsuporn)</span></div>
                 <div class='grey uppercase position'>
                   Chief Commercial Officer
                 </div>
@@ -271,7 +271,7 @@
                   ที่สำคัญเราไม่ลืมสอดแทรก เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br>(Karnkridit Nimsombun)</div>
+                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ<br><span class="Montserrat">(Karnkridit Nimsombun)</span></div>
                 <div class='grey uppercase position'>
                   Managing Director
                 </div>
@@ -426,7 +426,8 @@
                 <div class='sub-title'>ผู้เชี่ยวชาญ ด้านการสร้างสรรค์และการจัดสร้างเทคโนโลยีเพื่อความตื่นตาตื่นใจ (Immersive Technology)</div>
                 <p>
                   ผู้ออกแบบ สร้างสรรค์ สรรหา เทคโนโลยีระดับโลกต่างๆ ตลอดจนดูแล<br> การผลิตและจัดสร้าง ทั้ง Projection mapping,
-                  Animatronic,<br> Mechanic, Sensor และระบบ Automation ควบคุมการแสดงทั้งหมด<br> เพื่อให้จินตนาการจากบท ปรากฏเป็นความอัศจรรย์ที่สัมผัสได้จริงใน
+                  Animatronic,
+                  <br> Mechanic, Sensor และระบบ Automation ควบคุมการแสดงทั้งหมด<br> เพื่อให้จินตนาการจากบท ปรากฏเป็นความอัศจรรย์ที่สัมผัสได้จริงใน
                   KAAN Presented by SINGHA CORPORATION
                 </p>
                 <a target='_blank' href='http://www.facebook.com/XtremePlus'>
@@ -451,8 +452,9 @@
                 <div class='sub-title'>ผู้เชี่ยวชาญด้านระบบสลิง Special effect แมคคาทรอนิคส์<br>และระบบ Rigging Theatre ที่มีชื่อเสียงในระดับสากล</div>
                 <p>
                   จากประสบการณ์การทำงานร่วมกับชาวไทยและชาวต่างชาติมาหลายสิบปี<br> ทีมบ้านริกรับหน้าที่ดูแลและจัดการเรื่องเทคนิคพิเศษต่างๆ
-                  ของโชว์<br> รวมทั้งระบบ Theatre System ของ SINGHA D’LUCK Cinematic Theatre<br> เพื่อให้ KAAN Presented
-                  by SINGHA CORPORATION เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆ นาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
+                  ของโชว์
+                  <br> รวมทั้งระบบ Theatre System ของ SINGHA D’LUCK Cinematic Theatre<br> เพื่อให้ KAAN Presented by SINGHA
+                  CORPORATION เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆ นาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
                 </p>
                 <a target='_blank' href='http://www.baanrig.com'>
                   <div class="web-icon">
