--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <a href='https://d-luck.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>D'LUCK</span></a>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
-        <span class='nav-bar__navigation'><img src='./images/search.png' style='width: 15px; opacity: 0.5;'/></span>
+        <span class='nav-bar__navigation'><img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5;'/></span>
         <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/type' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
@@ -232,7 +232,9 @@
                   KAAN Presented by SINGHA CORPORATION ก้าวขึ้นเป็นสุดยอดการแสดง ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
-                <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br><<span class="Montserrat">(Anant Trisirikasem)</span></div>
+                <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>
+                  <<span class="Montserrat">(Anant Trisirikasem)</span>
+                </div>
                 <div class='grey uppercase position' style='white-space: no-wrap'>
                   Executive Committee, Theatre’s Technology and System Specialist
                 </div>
@@ -384,7 +386,7 @@
       </section>
       <section class='section' id='partner-page'>
         <div class='nav-hidden-name'>our<br>parter</div>
-        <div class="parallax">
+        <div class="partner-container">
           <h1>OUR PARTNER</h1>
           <div class='modal-hide-container' id='modal-link--partner1'>
             <div class='modal-hide modal-hide--logo'>
@@ -504,62 +506,58 @@
               </div>
             </div>
           </div>
-          <div class='row'>
-            <a href='#modal-link--partner2' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
+          <a href='#modal-link--partner2' class='modal-trigger'>
+            <div class='logo-box'>
+              <div class='logo-box__content'>
 
-                  <img src='./images/logo/Master_SANOOKDEE_30x27cm.png' width="120">
+                <img src='./images/logo/Master_SANOOKDEE_30x27cm.png' width="120">
 
-                </div>
-                <div class='logo-des'>SANOOKDEE TAWEESUK</div>
               </div>
-            </a>
-            <a href='#modal-link--partner5' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
+              <div class='logo-des'>SANOOKDEE TAWEESUK</div>
+            </div>
+          </a>
+          <a href='#modal-link--partner5' class='modal-trigger'>
+            <div class='logo-box'>
+              <div class='logo-box__content'>
 
-                  <img src='./images/logo/logo-scenario.png' width="170">
+                <img src='./images/logo/logo-scenario.png' width="170">
 
-                </div>
-                <div class='logo-des'>SCENARIO</div>
               </div>
-            </a>
-            <a href='#modal-link--partner4' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
-                  <img src='./images/logo/logo baanrig 2012@1x.png' width="120">
-                </div>
-                <div class='logo-des'>BAAN RIG</div>
+              <div class='logo-des'>SCENARIO</div>
+            </div>
+          </a>
+          <a href='#modal-link--partner4' class='modal-trigger'>
+            <div class='logo-box'>
+              <div class='logo-box__content'>
+                <img src='./images/logo/logo baanrig 2012@1x.png' width="120">
               </div>
-            </a>
-          </div>
-          <div class='row'>
-            <a href='#modal-link--partner3' class='modal-trigger'>
-              <div class='logo-box' style="height: 120px">
-                <div class='logo-box__content'>
-                  <img src='./images/logo/XTP official logo.png' width='170'>
-                </div>
-                <div class='logo-des'>XTREME PLUS</div>
+              <div class='logo-des'>BAAN RIG</div>
+            </div>
+          </a>
+          <a href='#modal-link--partner3' class='modal-trigger'>
+            <div class='logo-box' style="height: 120px">
+              <div class='logo-box__content'>
+                <img src='./images/logo/XTP official logo.png' width='170'>
               </div>
-            </a>
-            <a href='#modal-link--partner1' class='modal-trigger'>
-              <div class='logo-box' style="height: 120px">
-                <div class='logo-box__content'>
-                  <img src='./images/logo/A49@1x.png' width="120">
-                </div>
-                <div class='logo-des'>A49</div>
+              <div class='logo-des'>XTREME PLUS</div>
+            </div>
+          </a>
+          <a href='#modal-link--partner1' class='modal-trigger'>
+            <div class='logo-box' style="height: 120px">
+              <div class='logo-box__content'>
+                <img src='./images/logo/A49@1x.png' width="120">
               </div>
-            </a>
-            <a href='#modal-link--partner6' class='modal-trigger'>
-              <div class='logo-box' style="height: 120px">
-                <div class='logo-box__content'>
-                  <img src='./images/logo/Panjalucl_Our Partner_RITTA logo.png' width="170">
-                </div>
-                <div class='logo-des'>RITTA</div>
+              <div class='logo-des'>A49</div>
+            </div>
+          </a>
+          <a href='#modal-link--partner6' class='modal-trigger'>
+            <div class='logo-box' style="height: 120px">
+              <div class='logo-box__content'>
+                <img src='./images/logo/Panjalucl_Our Partner_RITTA logo.png' width="170">
               </div>
-            </a>
-          </div>
+              <div class='logo-des'>RITTA</div>
+            </div>
+          </a>
         </div>
       </section>
       <section class="section" id='faq-page'>
