--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,18 @@
         <a href='https://kaanshow-ec4c0.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>KAAN SHOW</span></a>
         <a href='https://d-luck.firebaseapp.com/' target='_blank'><span class='nav-bar__navigation'>D'LUCK</span></a>
         <span class='nav-bar__navigation active'>PANJALUCK</span>
-        <span class='nav-bar__navigation'>LANGUAGE</span>
+        <span class='nav-bar__navigation dropdownSelect' style="width: 60px">
+          TH
+          <img src='./images/arrowlang.png' style='width:15px;'/>
+          <div class="customDropdown">
+            <div class='options'>
+            <div class='option'>TH</div>
+            <div class='option'>EN</div>
+            <div class='option'>JP</div>
+            <div class='option'>EN</div>
+          </div>
+        </div>
+        </span>
         <span class='nav-bar__navigation'><img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5;'/></span>
         <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/type' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
