--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@
                 </p>
                 <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;' />
                 <div class="grey uppercase">อนันต์ ตรีสิริเกษม<br>
-                  <<span class="Montserrat">(Anant Trisirikasem)</span>
+                  <span class="Montserrat">(Anant Trisirikasem)</span>
                 </div>
                 <div class='grey uppercase position' style='white-space: no-wrap'>
                   Executive Committee, Theatre’s Technology and System Specialist
