--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,19 @@
         <div class='parallax'>
           <h1>VISION & MISSION</h1>
           <p>
-            <span class='fs17'>•</span> ดำเนินธุรกิจโรงละครด้วยมาตรฐานระดับโลก <br>
-            <span class='fs17'>•</span> รังสรรค์การแสดงเหนือจินตนาการผสมผสานความเป็นไทยด้วยเทคโนโลยีล้ำสมัย<br> &nbsp;&nbsp;จากการผสมผสานกันระหว่างสุดยอดของศาสตร์และศิลป์
+            <span class='fs17' style='display:inline-block; vertical-align: top; line-height: 19px;'>•</span>
+            <span style='max-width:470px; width: calc(100% - 12px); display: inline-block'>
+              ดำเนินธุรกิจโรงละครด้วยมาตรฐานระดับโลก
+            </span> <br>
+            <span class='fs17' style='display:inline-block; vertical-align: top; line-height: 19px;'>•</span>
+              <span style='max-width:460px; width: calc(100% - 12px); display: inline-block'>
+                รังสรรค์การแสดงเหนือจินตนาการผสมผสานความเป็นไทยด้วยเทคโนโลยีล้ำสมัยจากการผสมผสานกันระหว่างสุดยอดของศาสตร์และศิลป์
+              </span>
             <br>
-            <span class='fs17'>•</span> บริการผนวกความคิดสร้างสรรค์ที่จะทำให้ผู้ที่มาเยือนประทับใจในคุณค่าและเสน่ห์ของความเป็นไทย
+            <span class='fs17' style='display:inline-block; vertical-align: top; line-height: 19px;'>•</span>
+            <span style='max-width:100%; width: calc(100% - 12px); display: inline-block'>
+              บริการผนวกความคิดสร้างสรรค์ที่จะทำให้ผู้ที่มาเยือนประทับใจในคุณค่าและเสน่ห์ของความเป็นไทย
+            </span>
           </p>
         </div>
       </section>
@@ -758,7 +767,7 @@
         </div>
       </footer>
       <div class="footer-copy-right">
-        <span>© 2016 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
+        <span>© 2017 PANJALUCK PASUK CO. , LTD. ALL RIGHTS RESERVED.</span>
         <span style='float:right; cursor: pointer;' onclick="window.scrollTo(0,0)">TO THE TOP  <img src='./images/to_top.png' width='15'/></span>
         <div>
         </div>
