--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,9 @@
                 <div class='container-fluid board-container'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-1 Board Profile คุณศิริวัฒน์_r11_bo.png")'></a>
+                      <a href="#modal-link--board1" class='modal-trigger'>
+                        <img src='./images/Panjaluck_Website (560x770px)_04-3-1 Board Profile คุณศิริวัฒน์_r11_bo.png' />
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
@@ -321,7 +323,9 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board2" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-2 Board Profile คุณจีน่า_r11_bo.png")'></a>
+                      <a href="#modal-link--board2" class='modal-trigger'>
+                        <img src='./images/Panjaluck_Website (560x770px)_04-3-2 Board Profile คุณจีน่า_r11_bo.png'/>
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">จินา โอสถศิลป์</span>
@@ -335,7 +339,9 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board3" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-3 Board Profile คุณสิน_r11_bo.png")'></a>
+                      <a href="#modal-link--board3" class='modal-trigger'>
+                        <img src='./images/Panjaluck_Website (560x770px)_04-3-3 Board Profile คุณสิน_r11_bo.png' />
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
@@ -356,7 +362,9 @@
                 <div class='container-fluid board-container hackHidden' style='display:none;'>
                   <div class='row'>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board4" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png")'></a>
+                      <a href="#modal-link--board4" class='modal-trigger'>
+                        <img src='./images/Panjaluck_Website (560x770px)_04-3-4 Board Profile คุณอนันต์_r11_bo.png' />
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
@@ -370,7 +378,9 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board5" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-5 Board Profile คุณธนพล_r11_bo.png")'></a>
+                      <a href="#modal-link--board5" class='modal-trigger'>
+                        <img src="./images/Panjaluck_Website (560x770px)_04-3-5 Board Profile คุณธนพล_r11_bo.png"/>
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ธนพล วิระเทพสุภรณ์</span>
@@ -384,7 +394,9 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board6" class='modal-trigger' style='background-image:url("./images/Panjaluck_Website (560x770px)_04-3-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png")'></a>
+                      <a href="#modal-link--board6" class='modal-trigger'>
+                        <img src="./images/Panjaluck_Website (560x770px)_04-3-6 Board Profile คุณกานต์กฤดิชย์_r11_bo.png"/>
+                      </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">กานต์กฤดิชย์ นิ่มสมบุญ</span>
