--- a/public/index.html
+++ b/public/index.html
@@ -684,7 +684,7 @@
         </div>
       </section>
       <footer class='footer'>
-        <div class='block'>
+        <div class='block sitemap'>
           <h2>SITEMAP</h2>
           <div class='subBlock'>
             <ul>
