--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,14 @@
           </div>
         </div>
         </span>
-        <span class='nav-bar__navigation'><img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5;'/></span>
+        <span class='nav-bar__navigation'>
+          <img src='./images/search.png' class='seachImage' style='width: 15px; opacity: 0.5;'/>
+          <div class='search-value-container'>
+            <input type='text' class="search-input"/>
+            <div class='search-suggestion-box'>
+            </div>
+          </div>
+        </span>
         <a href='https://kaanshow-ec4c0.firebaseapp.com/ticket/type' target='_blank'><span class='nav-bar__navigation ticket'>TICKET</span></a>
       </div>
     </div>
